Fixed warning suppressions